--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -13,7 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/label_num_heroes"
-            android:labelFor="@id/spinner_num_players"/>
+            android:labelFor="@+id/spinner_num_players"/>
 
     <Spinner
             android:layout_width="wrap_content"
