--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -25,9 +25,18 @@
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_toEndOf="@id/label_num_heroes"
-            android:layout_toRightOf="@id/label_num_heroes"
             android:layout_alignBottom="@+id/label_num_heroes"
             android:spinnerMode="dropdown"
-            />
+            android:layout_alignBaseline="@+id/label_num_heroes"/>
+
+    <Button
+            android:id="@+id/button_randomize"
+            android:background="@color/accent"
+            android:textColor="@color/icons"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_below="@id/label_num_heroes"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="@string/button_randomize"/>
 
 </RelativeLayout>
