Add copyright notices

--- a/app/src/main/res/values/array_num_heroes.xml
+++ b/app/src/main/res/values/array_num_heroes.xml
@@ -1,8 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2014 Adam Howard <aeh AT aehdev DOT net>.
+  ~
+  ~ This file is part of Random Sentinels.
+  ~
+  ~ Random Sentinels is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ Random Sentinels is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with Random Sentinels. If not, see <http://www.gnu.org/licenses/>.
+  -->
+
 <resources>
-<string-array name="array_num_heroes">
-    <item>3</item>
-    <item>4</item>
-    <item>5</item>
-</string-array>
+    <string-array name="array_num_heroes">
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
 </resources>
