Randomly choose game elements, but can't yet display result

--- a/app/src/main/res/values/array_expansions_entries.xml
+++ b/app/src/main/res/values/array_expansions_entries.xml
@@ -29,7 +29,7 @@
         <item>Ambuscade mini-expansion</item>
         <item>Miss Information mini-expansion</item>
         <item>The Scholar mini-expansion</item>
-        <item>Silver Gulch mini-expansion</item>
+        <item>Silver Gulch 1883 mini-expansion</item>
         <item>The Final Wasteland mini-expansion</item>
     </string-array>
 </resources>
