--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="button_height">48dp</dimen>
+    <dimen name="card_content_padding">4dp</dimen>
+    <dimen name="dropdown_width">48dp</dimen>
 </resources>
