--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,7 +44,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textColor">@color/primary_dark</item>
+        <item name="fontPath">fonts/Bangers.ttf</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
     </style>
 
