--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -17,60 +17,120 @@
   ~ along with Random Sentinels. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              xmlns:card_view="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              tools:context="net.aehdev.randomsentinels.ResultActivity">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="net.aehdev.randomsentinels.ResultActivity">
 
-    <android.support.v7.widget.CardView
-            android:id="@+id/hero_card"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            card_view:cardCornerRadius="0dp"
-            card_view:contentPadding="@dimen/card_content_padding"
-            android:layout_gravity="center">
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin">
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                >
+        <android.support.v7.widget.CardView
+                android:id="@+id/hero_card"
+                style="@style/ResultCard"
+                card_view:cardCornerRadius="0dp"
+                card_view:contentPadding="@dimen/card_content_padding">
 
-            <TextView
-                    style="@style/ResultHeader"
-                    android:text="@string/heroes"/>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-            <View style="@style/Divider"/>
+                <TextView
+                        style="@style/ResultHeader"
+                        android:text="@string/heroes"/>
 
-            <TextView
-                    style="@style/ResultItem"
-                    android:text="Legacy"/>
+                <View style="@style/Divider"/>
 
-            <TextView
-                    style="@style/ResultItem"
-                    android:text="Tachyon"/>
+                <TextView
+                        style="@style/ResultItem.Hero"
+                        android:id="@+id/result_hero_1"
+                        android:text="Legacy"/>
 
-            <TextView
-                    style="@style/ResultItem"
-                    android:text="Bunker"/>
+                <TextView
+                        style="@style/ResultItem.Hero"
+                        android:id="@+id/result_hero_2"
+                        android:text="Tachyon"/>
 
-            <TextView
-                    style="@style/ResultItem"
-                    android:text="Wraith"/>
+                <TextView
+                        style="@style/ResultItem.Hero"
+                        android:id="@+id/result_hero_3"
+                        android:text="Bunker"/>
 
-            <TextView
-                    style="@style/ResultItem"
-                    android:text="Tempest"/>
+                <TextView
+                        style="@style/ResultItem.Hero"
+                        android:id="@+id/result_hero_4"
+                        android:text="Wraith"/>
 
-        </LinearLayout>
+                <TextView
+                        style="@style/ResultItem.Hero"
+                        android:id="@+id/result_hero_5"
+                        android:text="Tempest"/>
 
-    </android.support.v7.widget.CardView>
+            </LinearLayout>
 
-</LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+                android:id="@+id/villain_card"
+                style="@style/ResultCard"
+                card_view:cardCornerRadius="0dp"
+                card_view:contentPadding="@dimen/card_content_padding">
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                <TextView
+                        style="@style/ResultHeader"
+                        android:text="@string/villain"/>
+
+                <View style="@style/Divider"/>
+
+                <TextView
+                        style="@style/ResultItem.Villain"
+                        android:id="@+id/result_villain"
+                        android:text="Miss Information"/>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+                android:id="@+id/environment_card"
+                style="@style/ResultCard"
+                card_view:cardCornerRadius="0dp"
+                card_view:contentPadding="@dimen/card_content_padding">
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                <TextView
+                        style="@style/ResultHeader"
+                        android:text="@string/environment"/>
+
+                <View style="@style/Divider"/>
+
+                <TextView
+                        style="@style/ResultItem.Environment"
+                        android:id="@+id/result_environment"
+                        android:text="Pike Industrial Complex"/>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+</ScrollView>
