--- a/app/src/main/res/menu/menu_options.xml
+++ b/app/src/main/res/menu/menu_options.xml
@@ -28,6 +28,7 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/action_about"
+        android:orderInCategory="101"
         android:title="@string/about"
         app:showAsAction="never" />
 </menu>
