--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -18,15 +18,15 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="net.aehdev.randomsentinels.AboutActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              tools:context="net.aehdev.randomsentinels.AboutActivity">
 
     <TextView
         android:id="@+id/about_text"
@@ -35,15 +35,48 @@
         android:gravity="center_horizontal"
         android:text="Random Sentinels version 1.0.0"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
     <TextView
         style="@style/ResultHeader"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="Open Source Licenses" />
+        android:text="@string/header_oss_licenses"/>
 
-    <TextView style="@style/Divider" />
+    <TextView style="@style/Divider"/>
 
     <!--add views for titles and licenses here-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/title_bangers_license"
+                style="@style/LicenseTitle"
+                android:text="@string/about_bangers"/>
+
+            <TextView
+                android:id="@+id/text_bangers_license"
+                style="@style/LicenseText"/>
+
+            <TextView
+                style="@style/LicenseTitle"
+                android:id="@+id/title_calligraphy_license"
+                android:text="@string/about_calligraphy"/>
+
+            <TextView
+                style="@style/LicenseText"
+                android:id="@+id/text_calligraphy_license"/>
+
+            <TextView
+                style="@style/LicenseTitle"
+                android:id="@+id/title_butter_knife_license"
+                android:text="@string/about_butter_knife"/>
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
