--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -52,9 +52,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:animateLayoutChanges="true">
 
-            <TextView
+        <TextView
                 android:id="@+id/title_bangers_license"
                 style="@style/LicenseTitle"
                 android:text="@string/about_bangers"/>
