--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -93,5 +93,6 @@
         <item name="android:paddingRight">8dp</item>
         <item name="android:paddingBottom">8dp</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:autoLink">all</item>
     </style>
 </resources>
